# tdd-in-python

./: .editorconfig  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: tests.yaml
src/tdd_in_python/: __init__.py  calculate_graduated_tiered_pricing.py  hello_world.py  product_01.py  tiered_pricing_02.py  tired_pricing_02.py
src/tdd_in_python/outside_in_04/: __init__.py  app.py  database.py  video.py  video_creator.py  video_repository.py
tests/: test_graduated_tired_pricing_03.py  test_hello_world.py  test_product_01.py  test_tiered_pricing_02.py  test_tired_pricing_02.py
tests/outside_in_04/: test_create_video_endpoint.py  test_video_creator.py
